# format_all_args

./: Cargo.toml  README.md
examples/example/: Cargo.toml  main.rs
src/: lib.rs
tests/: main.rs
